# TravelAgent

./: README.md  agent.py  architecture.md  architecture.mmd  cli.py  evaluator.py  merge_vehicle.py  pyproject.toml  txt_to_json.py
car data/: vehicles_processed_2012.json  vehicles_processed_2013.json  vehicles_processed_2014.json  vehicles_processed_2015.json  vehicles_processed_2016.json  vehicles_processed_2017.json  vehicles_processed_2018.json  vehicles_processed_2019.json  vehicles_processed_2020.json  vehicles_processed_2021.json  vehicles_processed_2022.json  vehicles_processed_2023.json  vehicles_processed_2024.json  vehicles_processed_2025.json
config/: __init__.py  settings.py
models/: __init__.py  travel.py
tools/: __init__.py  knowledge.py  rag.py  retries.py  routes.py  validation.py
