[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Szymon Walczak"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-core (>=1.2.16,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "datetime (>=6.0,<7.0)",
    "pydantic-ai-slim[google] (>=1.63.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
